Edited wiki page TestingAndLogging through web user interface.

--- a/wiki/TestingAndLogging.wiki
+++ b/wiki/TestingAndLogging.wiki
@@ -1,6 +1,5 @@
-#summary Debug and tests with FlexUnit facilities
 #summary How to use the new (2.2) aggregation framework
-#labels Phase-Implementation
+#labels Phase-Implementation,Featured
 
 <wiki:toc max_depth="3" />
 
