--- a/wiki/SynchroneMessageHandling.wiki
+++ b/wiki/SynchroneMessageHandling.wiki
@@ -13,17 +13,17 @@ The synchronism is managed by the !MongoSyncRunner class. Each class holds a fif
 and all commands are executed, each waiting for the preceeding to be complete.
 Each !MongoSyncRunner communicate with !MongoDB with a unique socket to be sure that command are in order.
 
-When all commands are send, the runner sends a message (EVT_RUNNER_COMPLETE if all commands are allright or EVT_RUNNER_ERROR in case of almost on error).
+When all commands are send, the runner sends a message (EVT_RUNNER_COMPLETE if all commands are allright or EVT_RUNNER_ERROR in case of at least one error).
 In the COMPLETE or ERROR handler, you get a array of all the results of each commands.
 
-When a command is in error, the run stops. Optionnaly you can tels the Runner to continue execution if an error occurs. This is done when instanciating the !MongoSyncRunner.
+When a command is in error, the runner stops. Optionnaly you can tels the Runner to continue execution if an error occurs. This is done when instanciating the !MongoSyncRunner.
 
 == Responder and callback handling ==
 For each command you push in the !MongoSyncRunner we can have a responder. Callbacks of the responder will be called when the command completes (like normal commands sends by the driver directly).
-More than this, when runner complete, you get an array of all the MongoDocumentResponse for all commands. It up to you to decide which way you want to handle the responses (or not...). 
+More than this, when runner complete, you get an array of all the !MongoDocumentResponse for all commands. It up to you to decide which way you want to handle the responses (or not...). 
 
-Examples :
-Instanciating a MongoSyncRunner :
+== Examples ==
+Instanciating a !MongoSyncRunner :
 {{{
 // Give the driver in parameter and a boolean named continueOnError which is true if the runner
 // continue running in case of an error
