--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -5,7 +5,7 @@
 
 = Details =
 
-Installation is very easy. Just download the last driver swc file ([http://code.google.com/p/jmcnet-full-mongo-flex-driver/download here] and the _JMCNet Commons Library_ swc [http://code.google.com/p/jmcnet/download here]).
+Installation is very easy. Just download the last driver swc file ([http://code.google.com/p/jmcnet-full-mongo-flex-driver/downloads/list here] and the _JMCNet Commons Library_ swc [http://code.google.com/p/jmcnet/downloads/list here]).
 
 Make your build path points to these swc files, and you are ready to use !
 
